welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:7: error: type mismatch;
 found   : Unit
 required: Int
  }else if((a== b || b==c) || a==c){
        ^